--- a/MyBookStoreApp/src/app/sign-up-login/sign-up/sign-up.component.html
+++ b/MyBookStoreApp/src/app/sign-up-login/sign-up/sign-up.component.html
@@ -4,28 +4,66 @@
 		<input id="tab-2" type="radio" name="tab" class="sign-up" checked><label for="tab-2" class="tab">Sign Up</label>
 		<div class="login-form">
 			<div class="sign-up-htm">
-				<div class="group">
+				<mat-form-field class="example-full-width group" appearance="fill">
+					<mat-label class="label" >Username</mat-label>
+					<input matInput [formControl]="usernameFormControl" placeholder="Book@Store">
+					<mat-error *ngIf="usernameFormControl.hasError('required')">
+						Username is <strong>required</strong>
+					</mat-error>
+				</mat-form-field>
+				<!-- <div class="group">
 					<label for="user" class="label">Username</label>
 					<input id="user" type="text" class="input">
-				</div>
-				<div class="group">
+				</div> -->
+
+                <mat-form-field class="example-full-width group " appearance="fill">
+                    <mat-label class="label">Password</mat-label>
+                    <input matInput [type]="hide1 ? 'password' : 'text'" [formControl]="passwordFormControl" >
+                    <button mat-icon-button aria-label="Hide password" matSuffix (click)="hide1 = !hide1" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide1">
+					<mat-icon>{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
+					</button>
+					<mat-error *ngIf="passwordFormControl.hasError('required')">
+                        Password is <strong>required</strong>
+					</mat-error>
+                </mat-form-field>
+
+				<!-- <div class="group">
 					<label for="pass" class="label">Password</label>
 					<input  type="password" class="input" data-type="password">
-				</div>
-				<div class="group">
+				</div> -->
+
+                <mat-form-field class="example-full-width group " appearance="fill">
+                    <mat-label class="label">Repeat Password</mat-label>
+                    <input matInput [type]="hide2 ? 'password' : 'text'" [formControl]="repeatpasswordFormControl" >
+                    <button mat-icon-button aria-label="Hide password" matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide2">
+					<mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
+					</button>
+					<mat-error *ngIf="repeatpasswordFormControl.hasError('required')">
+                        Password is <strong>required</strong>
+					</mat-error>
+                </mat-form-field>
+
+				<!-- <div class="group">
 					<label for="pass" class="label">Repeat Password</label>
 					<input  type="password" class="input" data-type="password">
-				</div>
-				<div class="group">
+				</div> -->
+
+                <mat-form-field class="example-full-width group " appearance="fill">
+                   <mat-label class="label">Enter your email</mat-label>
+                   <input matInput placeholder="pat@example.com" [formControl]="email">
+                   <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+                </mat-form-field>
+
+				<!-- <div class="group">
 					<label for="pass" class="label">Email Address</label>
 					<input  type="text" class="input">
-				</div>
+				</div> -->
 				<div class="group">
 					<input type="submit" class="button" value="Sign Up">
 				</div>
 				<div class="hr"></div>
 				<div class="foot-lnk">
-					<label for="tab-1">Already Member?</label>
+					<label for="tab-1" routerLink="/login">Already Member?</label>
 				</div>
 			</div>
 		</div>
