--- a/MyBookStoreApp/src/app/sign-up-login/sign-up/sign-up.component.html
+++ b/MyBookStoreApp/src/app/sign-up-login/sign-up/sign-up.component.html
@@ -4,21 +4,38 @@
 		<input id="tab-2" type="radio" name="tab" class="sign-up" checked><label for="tab-2" class="tab">Sign Up</label>
 		<div class="login-form">
 			<div class="sign-up-htm">
-				<mat-form-field class="example-full-width group" appearance="fill">
+
+				<mat-form-field class="example-half-width group" appearance="fill">
+					<mat-label class="label" >Firstname</mat-label>
+					<input matInput [formControl]="firstnameFormControl" [(ngModel)]="FirstNameId">
+					<mat-error *ngIf="firstnameFormControl.hasError('required')">
+						Firstname is <strong>required</strong>
+					</mat-error>
+				</mat-form-field>
+
+				<mat-form-field class="example-half-width group" appearance="fill">
+					<mat-label class="label" >Lastname</mat-label>
+					<input matInput [formControl]="lastnameFormControl" [(ngModel)]="LastNameId">
+					<mat-error *ngIf="lastnameFormControl.hasError('required')">
+						Lastname is <strong>required</strong>
+					</mat-error>
+				</mat-form-field>
+
+				<mat-form-field class="example-half-width group" appearance="fill">
 					<mat-label class="label" >Username</mat-label>
-					<input matInput [formControl]="usernameFormControl" placeholder="Book@Store">
+					<input matInput [formControl]="usernameFormControl" (input)="checkUserExists()" placeholder="Book@Store" [(ngModel)]="UserNameId">
 					<mat-error *ngIf="usernameFormControl.hasError('required')">
 						Username is <strong>required</strong>
 					</mat-error>
+					
 				</mat-form-field>
-				<!-- <div class="group">
-					<label for="user" class="label">Username</label>
-					<input id="user" type="text" class="input">
-				</div> -->
+				<div *ngIf="existUsernameFlag" style= "color: red;">
+						Username already <strong>Exists</strong>
+				</div>
 
-                <mat-form-field class="example-full-width group " appearance="fill">
+                <mat-form-field class="example-half-width group " appearance="fill">
                     <mat-label class="label">Password</mat-label>
-                    <input matInput [type]="hide1 ? 'password' : 'text'" [formControl]="passwordFormControl" >
+                    <input matInput [type]="hide1 ? 'password' : 'text'" [formControl]="passwordFormControl" [(ngModel)]="PasswordId" >
                     <button mat-icon-button aria-label="Hide password" matSuffix (click)="hide1 = !hide1" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide1">
 					<mat-icon>{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
 					</button>
@@ -27,14 +44,11 @@
 					</mat-error>
                 </mat-form-field>
 
-				<!-- <div class="group">
-					<label for="pass" class="label">Password</label>
-					<input  type="password" class="input" data-type="password">
-				</div> -->
+				
 
-                <mat-form-field class="example-full-width group " appearance="fill">
+                <mat-form-field class="example-half-width group " appearance="fill">
                     <mat-label class="label">Repeat Password</mat-label>
-                    <input matInput [type]="hide2 ? 'password' : 'text'" [formControl]="repeatpasswordFormControl" >
+                    <input matInput [type]="hide2 ? 'password' : 'text'" [formControl]="repeatpasswordFormControl" [(ngModel)]="RepeatPasswordId" (focusout)="passwordCheck()">
                     <button mat-icon-button aria-label="Hide password" matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide2">
 					<mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
 					</button>
@@ -42,24 +56,34 @@
                         Password is <strong>required</strong>
 					</mat-error>
                 </mat-form-field>
-
-				<!-- <div class="group">
-					<label for="pass" class="label">Repeat Password</label>
-					<input  type="password" class="input" data-type="password">
-				</div> -->
-
-                <mat-form-field class="example-full-width group " appearance="fill">
+                <div *ngIf="passwordFlag" style= "color: red;">
+						Password doesnot <strong>Match</strong>
+				</div>
+                <mat-form-field class="example-half-width group " appearance="fill">
                    <mat-label class="label">Enter your email</mat-label>
-                   <input matInput placeholder="pat@example.com" [formControl]="email">
+                   <input matInput placeholder="pat@example.com" [formControl]="email" [(ngModel)]="EmailId">
                    <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
                 </mat-form-field>
 
-				<!-- <div class="group">
-					<label for="pass" class="label">Email Address</label>
-					<input  type="text" class="input">
-				</div> -->
+                <mat-form-field class="example-half-width group " appearance="fill">
+					<mat-label class="label" >Select Language</mat-label>
+					    <mat-select class="select" [(value)]="selectedLanguage">
+                            <mat-option >None</mat-option>
+                            <mat-option *ngFor="let language of language" [value]="language">{{language}}</mat-option>
+                        </mat-select>
+				</mat-form-field>
+				
+				<mat-form-field class="example-half-width group" appearance="fill">
+					<mat-label class="label" >Phone Number</mat-label>
+					<input matInput [formControl]="phonenumberFormControl" [(ngModel)]="PhoneNumberId">
+					<mat-icon matSuffix>phone</mat-icon>
+					<mat-error *ngIf="phonenumberFormControl.hasError('required')">
+                    Phone Number is <strong>required</strong>
+					</mat-error>
+				</mat-form-field>
+
 				<div class="group">
-					<input type="submit" class="button" value="Sign Up">
+					<input type="submit" (click)="submit()" class="button" value="Sign Up">
 				</div>
 				<div class="hr"></div>
 				<div class="foot-lnk">
