snackbar and footer

--- a/MyBookStoreApp/src/app/shared/footer/footer.component.html
+++ b/MyBookStoreApp/src/app/shared/footer/footer.component.html
@@ -1,1 +1,20 @@
-<p>footer works!</p>
+<footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="img">
+                <img src="assets/img/ngicon.jpeg" >
+                <span>Build on Angular 10</span>
+              </div>
+              <span class="footer-spacer"></span>
+              <div>
+                  <span >Powered by Google ©2010-2020.</span>
+                  <span>Code licensed under an MIT-style License.</span>
+                  <span>Documentation licensed under CC BY 4.0.</span>
+              </div>
+              <div class="footer-copyright">
+                  <span> © 2014 Copyright Text</span>
+              </div>
+              
+            </div>
+          </div>
+</footer>
