--- a/MyBookStoreApp/src/app/dashboard/dashboard.component.html
+++ b/MyBookStoreApp/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,2 @@
-<app-header [isAdmin]="0"></app-header>
+<app-header [isAdmin]="0" [enableCarousel]=" _enableCarousel"></app-header>
 <app-footer></app-footer>
