--- a/MyBookStoreApp/src/app/shared/header/header.component.html
+++ b/MyBookStoreApp/src/app/shared/header/header.component.html
@@ -40,4 +40,5 @@
         </mat-nav-list>
     </mat-drawer>
     <app-carousel *ngIf = "enableCarousel == true"></app-carousel>
+    <app-cards></app-cards>
 </mat-drawer-container>
