--- a/MyBookStoreApp/src/app/shared/cards/cards.component.html
+++ b/MyBookStoreApp/src/app/shared/cards/cards.component.html
@@ -1,11 +1,13 @@
 
 <section class="section">
   <div class="card-grid">
-    <a class="card" href="#">
-      <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1556680262-9990363a3e6d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+    <a class="card" *ngIf ="CardDetailsList.length == 0">No Book Found</a>
+    <a class="card" *ngFor="let card of CardDetailsList" href="#">
+      <!-- <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1556680262-9990363a3e6d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div> -->
+      <div class="card__background" style="background-image: url({{card.CardImgUrl}})"></div>
       <div class="card__content">
-        <p class="card__category">Category</p>
-        <h3 class="card__heading">Example Card Heading</h3>
+        <p class="card__category">{{card.CardCategory}}</p>
+        <h3 class="card__heading">{{card.CardName}}</h3>
       </div>
     </a>
 </div>
